5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1582_1332.log
== TEST (2019-03-13 21:39:28) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:39:35) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4))
-- EXECUTION TIME:
0.151515
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:39:40) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:43:39) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4**0,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4**0,5))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:43:52) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4**0.5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4**0.5))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:44:08) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4**5))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:44:25) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 4**5))
-- EXECUTION TIME:
0.253557
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:49:35) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, 45))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:49:53) 
-- CODE:
aresta = 5
area = 4
 
print(round(area,aresta))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:49:59) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, aresta))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:50:19) 
-- CODE:
aresta = 5
area = 
 
print(round(area, aresta))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:50:26) 
-- CODE:
aresta = 5
area = 4
 
print(round(area, aresta))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:50:46) 
-- CODE:
aresta = 5
area = 4
 
print(round(area,4 aresta))
-- ERROR:
File "XXXX", line 4
    print(round(area,4 aresta))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:50:56) 
-- CODE:
aresta = 5
area = 4
 
print(round(area,4, aresta))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,4, aresta))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:32:02) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:32:20) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:32:30) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:33:58) 
-- CODE:
aresta = 5
area =  5
 
print(round(area, 4))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:34:03) 
-- CODE:
aresta = 5
area =  5
 
print(round(area, 4))
-- EXECUTION TIME:
0.179905
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:35:16) 
-- CODE:
aresta = 5
area =  5
 
print(round(area, 4**0.2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4**0.2))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:36:00) 
-- CODE:
aresta = 5
area =  5
 
print(round(area, 4 % 5))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:37:59) 
-- CODE:
aresta = 5
area =  5
 
print(round(5, 4 ))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:42:01) 
-- CODE:
aresta = 5
area =  5
 
print(round(20.33, 4 ))
-- OUTPUT:
20.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:42:11) 
-- CODE:
aresta = 5
area =  5
 
print(round(20.33, 4 ))
-- OUTPUT:
20.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:42:15) 
-- CODE:
aresta = 5
area =  5
 
print(round(20.33, 4 ))
-- EXECUTION TIME:
0.123108
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
20.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:42:17) 
-- CODE:
aresta = 5
area =  5
 
print(round(20.33, 4 ))
-- OUTPUT:
20.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:43:15) 
-- CODE:
aresta = 5
area =  5
 
print(round(area, 4, 20.33 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4, 20.33 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:43:32) 
-- CODE:
aresta = 5
area =  5
 
print(round(area, 4 20.33 ))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4 20.33 ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:43:47) 
-- CODE:
aresta = 5
area =  5
 
print(round( 4, 20.33 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round( 4, 20.33 ))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:44:08) 
-- CODE:
aresta = 5
area =  5
 
print(round( 4, 20.33 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round( 4, 20.33 ))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:45:32) 
-- CODE:
aresta = 5
area =  6
 
print(round(area, 20.33 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 20.33 ))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:46:07) 
-- CODE:
aresta =5
area = 6
 
print(round(area, 20.33))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 20.33))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:46:26) 
-- CODE:
aresta =5
area = 6
 
print(round(area 20.33))
-- ERROR:
File "XXXX", line 4
    print(round(area 20.33))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:46:48) 
-- CODE:
aresta =5
area = 20.33
 
print(round(area, 4))
-- OUTPUT:
20.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:46:52) 
-- CODE:
aresta =5
area = 20.33
 
print(round(area, 4))
-- EXECUTION TIME:
0.153393
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
20.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:46:54) 
-- CODE:
aresta =5
area = 20.33
 
print(round(area, 4))
-- OUTPUT:
20.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:48:12) 
-- CODE:
aresta =5
area = 20.33
 
print(81//2)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:48:31) 
-- CODE:
aresta =5
area = 20.33
 
print(81//9)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:10:25) 
-- CODE:
aresta = 5
area = 130.08
 
print(round(area, 4))
-- OUTPUT:
130.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:10:32) 
-- CODE:
aresta = 5
area = 130.08
 
print(round(area, 4))
-- EXECUTION TIME:
0.176941
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
130.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:52:34) 
-- CODE:
aresta = 5
area = 5 = 3 * 3**1/3 * 5**2 /2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 5 = 3 * 3**1/3 * 5**2 /2
          ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:52:48) 
-- CODE:
aresta = 5
area = 3 * 3**1/3 * 5**2 /2
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:52:54) 
-- CODE:
aresta = 5
area = 3 * 3**1/3 * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.13412
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:52:56) 
-- CODE:
aresta = 5
area = 3 * 3**1/3 * 5**2 /2
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:54:13) 
-- CODE:
aresta = 5
area = 3 * 3**1/2 * 5**2 /2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:54:18) 
-- CODE:
aresta = 5
area = 3 * 3**1/2 * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.185976
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:54:20) 
-- CODE:
aresta = 5
area = 3 * 3**1/2 * 5**2 /2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:55:00) 
-- CODE:
aresta = 5
area = 3/2  3**1/2 * 5**2 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2  3**1/2 * 5**2 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:55:14) 
-- CODE:
aresta = 5
area = 3/2 * 3**1/2 * 5**2 
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:55:20) 
-- CODE:
aresta = 5
area = 3/2 * 3**1/2 * 5**2 
 
print(round(area, 4))
-- EXECUTION TIME:
0.268603
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:55:22) 
-- CODE:
aresta = 5
area = 3/2 * 3**1/2 * 5**2 
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:56:39) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:56:48) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.140418
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:12:41) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.131796
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:13:17) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.152133
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 00:25:44) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.138486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 00:27:43) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.231759
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 00:27:43) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.128218
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 13:32:43) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.195954
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 13:35:02) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.15944
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
